<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              xmlns:tools="http://schemas.android.com/tools"
              android:layout_width="match_parent"
              android:layout_height="wrap_content"
              xmlns:app="http://schemas.android.com/apk/res-auto"
              android:background="@color/colorAccent"
              android:id="@+id/mli_list_item"
              android:orientation="vertical"
              android:layout_margin="2dp">

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
                  android:layout_width="match_parent"
                  android:layout_height="wrap_content"
                  android:layout_marginLeft="5dp"
                  android:background="@android:color/white"
                  android:orientation="vertical" android:layout_marginStart="5dp">

        <android.support.constraint.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content" android:minHeight="69dp" android:padding="5dp">

            <ImageView
                    android:layout_width="45dp"
                    android:layout_height="45dp" app:srcCompat="@drawable/shopping_cart"
                    android:id="@+id/mli_image" android:layout_marginTop="8dp"
                    app:layout_constraintTop_toTopOf="parent" android:layout_marginBottom="8dp"
                    app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintStart_toStartOf="parent"
                    android:layout_marginLeft="8dp" android:layout_marginStart="8dp"
                    android:contentDescription="@string/sli_image_iv"/>
            <TextView
                    android:id="@+id/mli_name"
                    android:layout_height="wrap_content"
                    android:paddingLeft="5dp"
                    android:paddingRight="5dp"
                    android:paddingTop="5dp"
                    android:text="@string/name_tv"
                    android:textSize="20sp"
                    android:textStyle="bold"
                    android:textColor="#000"
                    tools:targetApi="jelly_bean" app:layout_constraintStart_toEndOf="@+id/mli_image"
                    android:layout_marginStart="8dp" android:layout_marginLeft="8dp"
                    android:layout_width="wrap_content" android:layout_marginTop="4dp"
                    app:layout_constraintTop_toTopOf="parent"
                    app:fontFamily="sans-serif-smallcaps"/>
            <TextView
                    android:id="@+id/mli_descr"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:padding="5dp"
                    android:textColor="#000"
                    android:text="@string/mli_decr_tv"
                    android:textSize="16sp"
                    tools:targetApi="jelly_bean"
                    android:layout_marginTop="4dp"
                    app:layout_constraintTop_toBottomOf="@+id/mli_name" android:layout_marginBottom="4dp"
                    app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintStart_toEndOf="@+id/mli_image"
                    android:layout_marginStart="8dp" android:layout_marginLeft="8dp"
                    app:fontFamily="sans-serif"/>
        </android.support.constraint.ConstraintLayout>

    </LinearLayout>
</LinearLayout>
